# waste-for-agents

./: .env.example  .gitignore  None  README.md  TODOS.md  pyproject.toml  server.json
docs/: index.html  ja.html  ko.html  pt.html
docs/assets/: copy.js  tristero.css
docs/launch/: devto-article.md  directory-submissions.md  show-hn.md
docs/superpowers/plans/: 2026-06-21-custos-mvp.md  2026-06-21-waste-for-agents-mvp.md  2026-06-26-rss-subscription-layer.md  2026-07-05-per-watch-change-consumption.md  2026-07-11-founding-tier-polar.md
docs/superpowers/specs/: 2026-06-25-agent-first-rss-design.md  2026-07-04-per-watch-change-consumption-design.md
examples/: sessionstart-hook.sh  youbike_demo.py
src/waste_for_agents/: __init__.py  __main__.py  auth.py  billing_polar.py  diff.py  discovery.py  netguard.py  normalize.py  paths.py  scheduler.py  server.py  store.py
src/waste_for_agents/sources/: __init__.py  base.py  http_json.py  rss.py  twinkle.py
tests/: test_auth.py  test_auth_e2e.py  test_auth_service.py  test_baseline.py  test_billing_polar.py  test_cli.py  test_diff.py  test_discovery.py  test_hn_live.py  test_http_json.py  test_integration.py  test_invariants_e2e.py  test_metering.py  test_netguard.py  test_normalize.py  test_paths.py  test_rolling_diff.py  test_rss.py  test_scheduler.py  test_scheduler_rolling.py  test_server.py  test_sources.py  test_store.py  test_store_rolling.py
tests/fixtures/polar/: subscription.active.json  subscription.canceled.json  subscription.created.json  subscription.revoked.json
