[project]
name = "waste-for-agents"
version = "0.1.0"
description = "Agent 持久監看訂閱層 — 盯結構化來源(MCP tool / API)做真 diff,有變化讓 agent 透過 list_changes 取得"
readme = "README.md"
authors = [
    { name = "Elek Li", email = "elek.li@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.2",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    # 精確 pin:正規化 determinism(F5);版本變動會經 norm_version 偵測並 re-baseline,
    # 但 pin 避免非預期升級偽報整片 feed modified。升級時一併更新 norm_version 對照。
    "feedparser==6.0.12",
    "markdownify==1.2.2",
]

[project.scripts]
waste-for-agents = "waste_for_agents.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
]

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]
